--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,8 +7,22 @@ en:
     name: MBoard
 
   navbar:
+    back: Back
+    new_post: New post
     sign_in: Sign in
+    sign_out: Sign out
     sign_up: Sign up
+
+  posts:
+    create_success: Post was successfully created.
+    comments: comment(s)
+    error_exp: prohibited this post from being saved
+    new_post: New post
+    posted_by: by
+    posted_on: Posted on
+    read_more: Read more
+    recent_posts: Recent posts
+    save: Save
 
   users:
     sign_in:
