Setup comments for posts
* Add comment model
* Add/update specs
* Add comments count to post

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,11 @@ en:
   app:
     name: MBoard
 
+  comments:
+    new: 'Leave a Comment:'
+    require_login: You must be logged in to comment...
+    submit: Submit
+
   navbar:
     back: Back
     new_post: New post
